assets/css/styles.scss
@import 'variables';

h1, h2, h3, h4, .navbar{
  font-family: $headline-font;
}

body {
  font-family: $text-font;
}

.nav-buttons {
  a {
    color: $nav-active;
  }
  @media (min-width: 768px) {
    margin-left: 10px;
  }
}

#navbar {
  background-color: $primary-color;
  background-image: none;
  padding: 0px;
  height: $nav-height;
  min-height: $nav-height;
  box-shadow: 0px 1px 3px #AAA;
  border-bottom: 0px;

  .container {
    margin: 0 auto;
    height: $nav-height;
  }
}

.container {
   margin-top: 61px;
 }

.navbar-header {
  height: $nav-height;
}

.navbar-inverse .navbar-toggle {
  &:focus, &:hover {
    background-color: $secondary-color;
    transition: .5s background-color linear

  }
}

.navbar-toggle {
  margin: 3px 5px 2px 0px;
}

.navbar-nav >li > a {
  padding: 10px;
}

.navbar-inverse .navbar-brand {
  color: $nav-link;
  height: $nav-height;
  padding: 9px 15px;
  transition: .25s background-color linear, .25s color linear;

  :focus, :hover {
    color: $nav-active;
  }
}

#nav-search {
  width: 100%;
  border-radius: 5px;
  border: 0px;
  background-color: $nav-link;
  background-image: url(/static/images/search.png);
  background-size: 20px;
  background-position: 1% 49%;
  background-repeat: no-repeat;
  padding-left: 30px;
  height: $nav-form-height;
  transition: .25s background-color linear, .25s color linear, .25s width linear;
  &:active, &:focus {
    background-color: $nav-active
  }
}

#nav-submit {
  padding-top: 0px;
  padding-bottom: 0px;
  width: 10px;
  opacity: 0;
  left: 1px;
  top: -25px;
  position: absolute;
  height: $nav-form-height;
}

#nav-form {
  width: 100%;
  height: 100%;
  margin-left: -7px;
  vertical-align: middle;
  text-align: center;
  position: relative;
}

.navbar-inverse .navbar-nav {
  .open {
    a, a:focus, a:hover {
      background-image: none;
      background-color: $secondary-color;
      color: $nav-active;
    }
  }
  li > a {
    color: $nav-link;
    transition: .3s background-color linear, .3s color linear;
  }
}

.dropdown-menu {
  li {
    a:focus, a:hover {
      background-image: none;
    }
  }
}

.navbar-inverse .navbar-nav .open .dropdown-menu {
  background-color: $secondary-color;
  li{
    a {
      color: $nav-link;
      &:focus, &:hover {
        background-color: $primary-color;
        color: $nav-active;
        background-image: none;
      }
    }
  }
}

.dropdown-menu {
  background-color: $secondary-color;
  width: 100%;
  border: 0px;
  border-radius: 5px;
  box-shadow: 0 3px 8px rgba(0, 0, 0, .3);
  li {
      background-color: $secondary-color;
    a {
       background-color: $secondary-color;
       padding: 3px 20px;
       height: 26px;
    }
  }
}

.dropdown .dropdown-menu {
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;

    max-height: 0;
    display: block;
    overflow: hidden;
    opacity: 0;
}

.dropdown.open .dropdown-menu {
    max-height: 300px;
    opacity: 1;
}

.dropdown-menu > li > a, .navbar-nav .open .dropdown-menu .dropdown-header, .navbar-nav .open .dropdown-menu>li>a, .navbar-nav .dropdown-menu>li>a {
  padding: 3px 20px;
  height: 26px
}

.navbar-form {
  margin-left: auto;
  margin-right: auto;
  margin-top: -1px;
  @media (min-width: 768px) {
    margin-top: 6px;
    margin-bottom: 0px;
    height: $nav-form-height;
    width: 55%
  }
  @media (min-width: 992px) {
    width: 66%;
  }
  @media (max-width: 767px) {
    width: 100%;
  }
}

.navbar-collapse.collapse {
  @media (min-width: 768px) {
    height: $nav-height - 1px !important;
  }
}

.navbar-collapse {
   background-color: $primary-color;
   border-top: 0px;
   margin: 0;
   ul {
     @media (max-width: 767px){
       padding-left: 15px;
       padding-right: 15px;
     }
   }
}

#task-box {
  height: 300px;
  overflow: scroll
}

#hello {
  color: red;
}

.expired {
  color: red
}

.picture-option {
  height: $small-picture;
  display: inline-block;
}

.picture-option-selected {
  border: 2px solid $orange-color;
}

.store-option {
  height: 220px;
  display: inline-block;
}

.store-picture-option {
  height: $small-picture;
  display: block;
}

.friend-list {
  overflow: scroll;
  height:400px;
  border: 2px solid #AAA;
  border-radius: 5px;
}

.friend-display {
  padding: 15px;
  background-color: #F2F2F2;
  border-radius: 5px;
  overflow: scroll;
  height:400px;
}

.tiny-avatar {
  height:50px;
}

.search-result {
  border-radius: 5px;
  box-shadow: $list-shadow;

  @media(min-width: 768px) {
    height: 185px;
  }
  img {
    height: $small-picture;
    width: $small-picture;
    border: 1px #e5e5e5 inset;
    margin: 17.5px;
  }
  .card-block {
    display: inline-block;
    text-align: center;
    border-radius: 5px;
    vertical-align: middle;
    height: 150px;
  }
  .search-img {
    vertical-align: middle;
    text-align: center;
    display: inline-block;
  }

  .btn-area {
    text-align: center;
    display: inline-block;
    vertical-align: middle;

    @media(min-width: 768px) {
      height: 185px;
    }

    button {
      @media(min-width: 768px) {
        margin-top: 73px;
      }
      margin-bottom: 15px;
    }
  }
}
.user-detail {
  display: inline-block;
  width: 100%;
}

.sparklines {
  height: 75px;
}

.request-message {
  margin: 23px 0px
}

.request-notification {
  margin: 23px 20px;
}

.request-btn {
  margin: 16px 0px
}

.request-list {
  box-shadow: $list-shadow;
  margin-bottom: 5px;
}

.home-header, .profile-header {
  margin-bottom: 15px;
}

.profile-header {
  min-height: 166px;
  @media(max-width: 767px) {
    min-height: 320px;
  }
}

.profile-picture {
  height: 166px;
  border: 3px ridge $nav-link;
}

.react-tabs [role=tab] {
  border: 1px solid rgba(200, 200, 200, 0.5);
  border-bottom: 0;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.react-tabs {
  background-color: #FFF;
  border-radius: 5px;
}

.friend-placeholder {
  padding-top: 172px;
  text-align: center;
}

.friend-list-item{
  box-shadow: 2px 2px 2px #AAA;
}

.selected {
  background-color: $tertiary-color;
  color: #FFF;
}

.tab-hover {
  background-color: #FAFAFA;
  border-bottom: 1px solid #AAA;
}

.points-box {
  border: 1px solid $nav-link;
  border-radius: .25rem;
  min-height: 71px;
  padding-top: 10px;
  @media(max-width: 767px) {
    padding-left: 0;
    margin: 15px .9375rem;
  }
}

.profile-points-box {
  border: 1px solid $nav-link;
  border-radius: .25rem;
  min-height: 140px;
  padding-top: 10px;
  @media(max-width: 767px) {
    margin-top: 15px;
  }
}

.no-gutters {
  margin-right: 0;
  margin-left: 0;
  padding-right: 0;
  padding-left: 0;
}

